--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,8 +20,17 @@ spring:
       ddl-auto: update
     show-sql: true
 
+  config:
+    import:
+      - "application_qa.yaml"
+      - "application_prod.yaml"
+
+  profiles:
+    active:
+      - "qa"
+
 build:
-  version: "1.0"
+  version: "3.0"
 
 accounts:
   message: "Welcome to Bank accounts related local APIs"
