--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,19 +3,15 @@ server:
 
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
-
-  h2:
-    console:
-      enabled: true
+    url: jdbc:mysql://localhost:3307/accountsdb
+    username: root
+    password: root
 
   jpa:
-    hibernate:
-      ddl-auto: update
     show-sql: true
+  sql:
+    init:
+      mode: always
 
   application:
     name: accounts
