--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -31,3 +31,25 @@ management:
     web:
       exposure:
         include: "*"
+  info:
+    env:
+      enabled: true
+
+  endpoint:
+    shutdown:
+      access: unrestricted
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8070/eureka
+
+info:
+  app:
+    name: "accounts"
+    description: "Bank Accounts Application"
+    version: "2.1.1"
