Implemented correlation-id logic for tracing

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -53,3 +53,9 @@ info:
     name: "accounts"
     description: "Bank Accounts Application"
     version: "2.1.1"
+
+logging:
+  level:
+    com:
+      ritik:
+        accountservice: DEBUG
